--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -17,6 +17,7 @@ jobs:
       - runs-on=${{ github.run_id }}
       - runner=64cpu-linux-arm64
       - extras=s3-cache
+      - disk=large
     steps:
       - name: Checkout base branch
         uses: actions/checkout@v4
