--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -46,19 +46,19 @@ jobs:
           rm -rf ~/.openvm-base
           mv ~/.openvm ~/.openvm-base
 
-      - name: Build and keygen examples from base branch
-        run: |
-          mkdir -p ./base-outputs/examples
-          for example in examples/*/; do
-            if [ -f "$example/Cargo.toml" ]; then
-              example_name=$(basename "$example")
-              echo "Building and generating keys for example: $example_name"
-              cd "$example"
-              cargo openvm build --no-transpile
-              cargo openvm keygen --output-dir "../../base-outputs/examples/$example_name"
-              cd ../..
-            fi
-          done
+      # - name: Build and keygen examples from base branch
+      #   run: |
+      #     mkdir -p ./base-outputs/examples
+      #     for example in examples/*/; do
+      #       if [ -f "$example/Cargo.toml" ]; then
+      #         example_name=$(basename "$example")
+      #         echo "Building and generating keys for example: $example_name"
+      #         cd "$example"
+      #         cargo openvm build --no-transpile
+      #         cargo openvm keygen --output-dir "../../base-outputs/examples/$example_name"
+      #         cd ../..
+      #       fi
+      #     done
 
       - name: Build and keygen benchmarks from base branch
         run: |
@@ -88,21 +88,21 @@ jobs:
         run: |
           cargo openvm setup
 
-      - name: Build and keygen examples from tagged version
-        run: |
-          mkdir -p ./tagged-outputs/examples
-          for example in examples/*/; do
-            if [ -f "$example/Cargo.toml" ]; then
-              example_name=$(basename "$example")
-              echo "Building and generating keys for example: $example_name"
-              cd "$example"
-              cargo openvm build --no-transpile
-              # TODO(yi): Change --vk-output to --output-dir after v1.3.0 release
-              mkdir -p "../../tagged-outputs/examples/$example_name"
-              cargo openvm keygen --vk-output "../../tagged-outputs/examples/$example_name/app.vk"
-              cd ../..
-            fi
-          done
+      # - name: Build and keygen examples from tagged version
+      #   run: |
+      #     mkdir -p ./tagged-outputs/examples
+      #     for example in examples/*/; do
+      #       if [ -f "$example/Cargo.toml" ]; then
+      #         example_name=$(basename "$example")
+      #         echo "Building and generating keys for example: $example_name"
+      #         cd "$example"
+      #         cargo openvm build --no-transpile
+      #         # TODO(yi): Change --vk-output to --output-dir after v1.3.0 release
+      #         mkdir -p "../../tagged-outputs/examples/$example_name"
+      #         cargo openvm keygen --vk-output "../../tagged-outputs/examples/$example_name/app.vk"
+      #         cd ../..
+      #       fi
+      #     done
 
       - name: Build and keygen benchmarks from tagged version
         run: |
@@ -131,28 +131,28 @@ jobs:
             exit 1
           fi
 
-      - name: Compare example verification keys
-        run: |
-          echo "Comparing example verification keys between base branch and ${{ env.version }}..."
-          failed=0
-          for example in examples/*/; do
-            if [ -f "$example/Cargo.toml" ]; then
-              example_name=$(basename "$example")
-              echo "Checking example: $example_name"
-              if cmp "./base-outputs/examples/$example_name/app.vk" "./tagged-outputs/examples/$example_name/app.vk"; then
-                echo "✅ $example_name verification keys are identical"
-              else
-                echo "❌ $example_name verification keys differ"
-                failed=1
-              fi
-            fi
-          done
-          if [ $failed -eq 1 ]; then
-            echo "❌ Some example verification keys differ - versioning policy violated"
-            exit 1
-          else
-            echo "✅ All example verification keys are identical"
-          fi
+      # - name: Compare example verification keys
+      #   run: |
+      #     echo "Comparing example verification keys between base branch and ${{ env.version }}..."
+      #     failed=0
+      #     for example in examples/*/; do
+      #       if [ -f "$example/Cargo.toml" ]; then
+      #         example_name=$(basename "$example")
+      #         echo "Checking example: $example_name"
+      #         if cmp "./base-outputs/examples/$example_name/app.vk" "./tagged-outputs/examples/$example_name/app.vk"; then
+      #           echo "✅ $example_name verification keys are identical"
+      #         else
+      #           echo "❌ $example_name verification keys differ"
+      #           failed=1
+      #         fi
+      #       fi
+      #     done
+      #     if [ $failed -eq 1 ]; then
+      #       echo "❌ Some example verification keys differ - versioning policy violated"
+      #       exit 1
+      #     else
+      #       echo "✅ All example verification keys are identical"
+      #     fi
 
       - name: Compare benchmark verification keys
         run: |
