--- a/.github/workflows/benchmarks-execute.yml
+++ b/.github/workflows/benchmarks-execute.yml
@@ -29,10 +29,7 @@ env:
 jobs:
   codspeed-walltime-benchmarks:
     name: Run codspeed walltime benchmarks
-    runs-on:
-      - runs-on=${{ github.run_id }}
-      - runner=8cpu-linux-x64
-      - extras=s3-cache
+    runs-on: codspeed-macro
 
     env:
       CODSPEED_RUNNER_MODE: walltime
