chore: cargo shear

--- a/crates/toolchain/openvm/Cargo.toml
+++ b/crates/toolchain/openvm/Cargo.toml
@@ -37,4 +37,4 @@ heap-embedded-alloc = ["openvm-platform/heap-embedded-alloc"]
 std = ["serde/std", "openvm-platform/std"]
 
 [package.metadata.cargo-shear]
-ignored = ["openvm-custom-insn"]
+ignored = ["openvm-custom-insn", "getrandom"]
