--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -32,6 +32,7 @@ openvm-poseidon2-air = { git = "https://github.com/openvm-org/openvm.git", branc
 cc = { version = "1.0", features = ["parallel"] }  # For CUDA compilation
 
 [dev-dependencies]
+test-case = { workspace = true }
 itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
 p3-field = { workspace = true }
 p3-baby-bear = { workspace = true }
