feat: implement fn pointer based exec for algebra/ecc

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,4 @@
 [toolchain]
-channel = "nightly-aarch64-apple-darwin"
+channel = "nightly"
+targets = ["aarch64-apple-darwin"]
 components = ["clippy", "rustfmt"]
