--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,7 @@ codegen-units = 1
 
 [profile.dev]
 opt-level = 1
+debug = 2
 
 # For O1 optimization but still fast(ish) compile times
 [profile.fast]
