--- a/Cargo.toml
+++ b/Cargo.toml
@@ -241,6 +241,7 @@ once_cell = { version = "1.20", default-features = false }
 tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 k256 = { version = "0.13.4", default-features = false }
 elliptic-curve = { version = "0.13.8", default-features = false }
+crypto-bigint = { version = "0.5.5", default-features = false }
 ecdsa-core = { version = "0.16.9", package = "ecdsa", default-features = false }
 num-bigint = { version = "0.4.6", default-features = false }
 num-integer = { version = "0.1.46", default-features = false }
