--- a/Cargo.toml
+++ b/Cargo.toml
@@ -240,6 +240,7 @@ once_cell = { version = "1.20", default-features = false }
 # cryptography, default-features = false for no_std
 tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 k256 = { version = "0.13.4", default-features = false }
+p256 = { version = "0.13.2", default-features = false }
 elliptic-curve = { version = "0.13.8", default-features = false }
 crypto-bigint = { version = "0.5.5", default-features = false }
 ecdsa-core = { version = "0.16.9", package = "ecdsa", default-features = false }
