--- a/extensions/ecc/circuit/Cargo.toml
+++ b/extensions/ecc/circuit/Cargo.toml
@@ -32,6 +32,8 @@ serde_with = { workspace = true }
 lazy_static = { workspace = true }
 hex-literal = { workspace = true }
 k256 = { workspace = true, features = ["arithmetic", "expose-field"] }
+p256 = { workspace = true, features = ["arithmetic", "expose-field"] }
+halo2curves-axiom = { workspace = true }
 crypto-bigint = { workspace = true }
 
 [dev-dependencies]
