--- a/benchmarks/prove/Cargo.toml
+++ b/benchmarks/prove/Cargo.toml
@@ -41,6 +41,7 @@ num-bigint = { workspace = true, features = ["std", "serde"] }
 rand.workspace = true
 serde.workspace = true
 tracing.workspace = true
+toml.workspace = true
 
 [dev-dependencies]
 
