feat: mod-builder GPU tracegen (#70)
* feat: skeleton for FieldExpression GPU tracegen

* feat: initial attempt at tracegen, broken carry

* refactor for readability

* refactor + change expr structure

* ugly impl

* working for addition

* feat: also copy constraints AST to GPU

* multiplication except carry

* all basic operations implemented

* tested complex expression (working)

* calculate memory req at runtime

* chore: cleanup

* move recursion stuff to local memory

* refactor FieldExprMeta and tests

* fixed alignment for eval_temp

* make max_shared_mem calculation static

* split up field_expression.rs

* change expression constants to enum

* refactor (minor pr comments)

* avoid creating single dummy element buffers

* move stuff away from shared memory

* use RowSlice

* refactor: clean up and simplify field_expression kernel + folder structure

* fix: make stuff compile

* refactor: move tests into mod-builder folder

* fix: compare limbs bug + normalize limbs comment

* feat: use rv32 vec heap adapter + range checker

* chore: lint fmt

* feat: mod builder rewrite, signed bigint structure, working w/ algebra + ecc

* refactor: remove unused variables

* chore: compiler warnings

* refactor: some pr comments

* refactor: more pr comments

* fix: bug fixes

* feat: support 48 limb prime, use bytes as limbs, minor pr comments

--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 path = "src/lib.rs"
 
 [dependencies]
+cuda-runtime-sys = { workspace = true }
 rand = { version = "0.8.5", default-features = false }
 tracing = { workspace = true }
 derive-new = { workspace = true }
@@ -15,6 +16,8 @@ derive-new = { workspace = true }
 stark-backend-gpu = { workspace = true }
 openvm-stark-backend = { workspace = true }
 openvm-stark-sdk = { workspace = true }
+halo2curves-axiom = { workspace = true }
+num-traits = { workspace = true }
 
 # openvm
 openvm-circuit = { workspace = true }
@@ -28,6 +31,9 @@ openvm-rv32im-transpiler = { git = "https://github.com/openvm-org/openvm.git", b
 openvm-rv32im-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", default-features = false }
 openvm-algebra-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", default-features = false }
 openvm-algebra-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", default-features = false }
+openvm-mod-circuit-builder = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", default-features = false }
+openvm-ecc-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", default-features = false }
+openvm-ecc-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", default-features = false }
 openvm-keccak256-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", default-features = false }
 # p3
 p3-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
@@ -48,6 +54,8 @@ itertools = { version = "0.14.0", default-features = false, features = ["use_std
 openvm-instructions = { workspace = true }
 openvm-circuit = { workspace = true, features = ["test-utils"] }
 openvm-rv32im-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", features = ["test-utils"] }
+openvm-rv32-adapters = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", features = ["test-utils"] }
+openvm-mod-circuit-builder = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", features = ["test-utils"] }
 openvm-keccak256-transpiler = { workspace = true }
 
 [features]
