feat: algebra + ecc CUDA tracegen (#124)
* feat: skeleton for FieldExpression GPU tracegen

* feat: initial attempt at tracegen, broken carry

* refactor for readability

* refactor + change expr structure

* ugly impl

* working for addition

* feat: also copy constraints AST to GPU

* multiplication except carry

* all basic operations implemented

* tested complex expression (working)

* calculate memory req at runtime

* chore: cleanup

* move recursion stuff to local memory

* refactor FieldExprMeta and tests

* fixed alignment for eval_temp

* make max_shared_mem calculation static

* split up field_expression.rs

* change expression constants to enum

* refactor (minor pr comments)

* avoid creating single dummy element buffers

* move stuff away from shared memory

* use RowSlice

* refactor: clean up and simplify field_expression kernel + folder structure

* fix: make stuff compile

* refactor: move tests into mod-builder folder

* fix: compare limbs bug + normalize limbs comment

* feat: use rv32 vec heap adapter + range checker

* chore: lint fmt

* feat: init modular addsub

* wip: working spaghetti addsub

* feat: working impl of addsub and muldiv

* chore: cleanup debug + comments

* feat: working algebra fp2 muldiv

* feat: working algebra fp2 addsub

* feat: ecc weierstrass chip

* feat: working everything w/ lots of debug

* chore: remove excessive debug and old tests

* fix: int_mul over num_limbs, proper routing for adapter template + other assorted bugs

* refactor: move away bigint arithmetic, rename tests

* refactor: cleanup + optimization

* refactor: make bigint contain a biguint

* refactor: bigint constructors

* refactor: move constants to top level constants.h

* feat: mod builder rewrite, signed bigint structure, working w/ algebra + ecc

* refactor: remove unused variables

* chore: compiler warnings

* chore: cleanup

* chore: compiler warnings

* refactor: update vec heap patch

* chore: fmt warning

* refactor: pr comments

* chore:

--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -35,6 +35,7 @@ openvm-mod-circuit-builder = { git = "https://github.com/openvm-org/openvm.git",
 openvm-ecc-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", default-features = false }
 openvm-ecc-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", default-features = false }
 openvm-keccak256-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", default-features = false }
+openvm-bigint-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", default-features = false }
 # p3
 p3-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
 p3-field = { workspace = true }
