fix: update flag name

--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -97,9 +97,8 @@ jobs:
       #         echo "Building and generating keys for example: $example_name"
       #         cd "$example"
       #         cargo openvm build --no-transpile
-      #         # TODO(yi): Change --vk-output to --output-dir after v1.3.0 release
       #         mkdir -p "../../tagged-outputs/examples/$example_name"
-      #         cargo openvm keygen --vk-output "../../tagged-outputs/examples/$example_name/app.vk"
+      #         cargo openvm keygen --output-dir "../../tagged-outputs/examples/$example_name/app.vk"
       #         cd ../..
       #       fi
       #     done
@@ -113,9 +112,8 @@ jobs:
               echo "Building and generating keys for benchmark: $benchmark_name"
               cd "$benchmark"
               cargo openvm build --no-transpile
-              # TODO(yi): Change --vk-output to --output-dir after v1.3.0 release
               mkdir -p "../../../tagged-outputs/benchmarks/$benchmark_name"
-              cargo openvm keygen --vk-output "../../../tagged-outputs/benchmarks/$benchmark_name/app.vk"
+              cargo openvm keygen --output-dir "../../../tagged-outputs/benchmarks/$benchmark_name/app.vk"
               cd ../../..
             fi
           done
