feat: Add a `touchemall` feature for checking that the traces are fully filled (#150)
* Add a `touchemall` feature for checking that the traces are fully filled

* Fix codespell and lint

* ci: use new feature in tracegen ci

* put back release

---------

Co-authored-by: Alexander Golovanov <Sample text>
Co-authored-by: Jonathan Wang <31040440+jonathanpwang@users.noreply.github.com>

--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -62,3 +62,4 @@ openvm-keccak256-transpiler = { workspace = true }
 [features]
 default = ["test-utils"]
 test-utils = ["openvm-circuit/test-utils"]
+touchemall = ["stark-backend-gpu/touchemall"]
