--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -59,8 +59,10 @@ openvm-rv32im-circuit = { git = "https://github.com/openvm-org/openvm.git", bran
 openvm-rv32-adapters = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", features = ["test-utils"] }
 openvm-mod-circuit-builder = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution", features = ["test-utils"] }
 openvm-keccak256-transpiler = { workspace = true }
+tracegen-gpu = { path = ".", features = ["test-utils"] }
 
 [features]
-default = ["test-utils"]
+default = ["metrics"]
+metrics = ["openvm-circuit/metrics"]
 test-utils = ["openvm-circuit/test-utils"]
 touchemall = ["stark-backend-gpu/touchemall"]
