--- a/tracegen-gpu/Cargo.toml
+++ b/tracegen-gpu/Cargo.toml
@@ -38,6 +38,7 @@ openvm-ecc-transpiler = { workspace = true }
 openvm-keccak256-circuit = { workspace = true }
 openvm-poseidon2-air = { workspace = true }
 openvm-bigint-circuit = { workspace = true }
+openvm-pairing-guest = { workspace = true, features = ["bls12_381"] }
 
 # p3
 p3-air = { workspace = true }
@@ -48,6 +49,7 @@ p3-keccak-air = { workspace = true }
 serde = { workspace = true }
 num-bigint = "0.4"
 derive_more = { workspace = true }
+strum = { workspace = true }
 
 [build-dependencies]
 cc = { workspace = true }
